--- a/README.rdoc
+++ b/README.rdoc
@@ -7,7 +7,7 @@ Based on: http://eigenclass.org/hiki.rb?ruby+backtrace+data
 
 == Installation
 
- sudo gem install dtsato-callstack --source http://gems.github.com
+ sudo gem install callstack
 
 == Dependencies
 
